--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,16 +17,18 @@
             <i class="bi bi-list"></i>
           </a>
         </li>
-        <li class="nav-item"><a href="/dashboard" class="nav-link">Home</a></li>
+        <li class="nav-item"><a routerLink="/dashboard" routerLinkActive="active" class="nav-link">Home</a></li>
         <li *ngIf="isAdmin" class="nav-item">
-          <a href="/usuarios" class="nav-link">Usuarios</a>
+          <a routerLink="/usuarios" routerLinkActive="active"class="nav-link">Usuarios</a>
         </li>
       </ul>
       <!--end::Start Navbar Links-->
 
       <!--begin::End Navbar Links-->
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a href="/perfil" class="nav-link">Mi Perfil</a></li>
+        <li class="nav-item">
+          <a routerLink="/perfil" class="nav-link" routerLinkActive="active">Mi Perfil</a>
+        </li>
         <li class="nav-item">
           <button (click)="logout()" class="nav-link btn btn-link p-0">Cerrar Sesión</button>
         </li>
