--- a/src/app/usuarios/listado/usuarios.component.html
+++ b/src/app/usuarios/listado/usuarios.component.html
@@ -12,7 +12,8 @@
     <!-- Main content -->
     <section class="content">
       <div class="container-fluid">
-       
+       <!-- Mostrar mientras se cargan los usuarios -->
+
         <!-- /.row -->
         <div class="row">
           <div class="col-12">
@@ -42,25 +43,35 @@
                       <th>Nombre usuario</th>
                       <th>Email</th>
                       <th>Status</th>
-                      <th>Creado</th>
                       <th>Acciones</th>
                     </tr>
                   </thead>
+
+                   
+
                     <tbody>
+                    <tr *ngIf="isLoading" >
+                      <td colspan="8"> 
+                        <div class="text-center p-4">
+                          <div class="spinner-border text-primary" role="status">
+                        </div>
+                        <p class="mt-2">Cargando usuarios...</p>
+                      </div></td>
+                     
+                    </tr>
+
                     <tr *ngFor="let user of users">
                       <td>{{ user.id }}</td>
-                      <td>{{ user.username }}</td>
+                      <td>{{ user.nombreUsuario }}</td>
                       <td>{{ user.email }}</td>
                       <td>
-                      <span 
-                          class="float-right badge" 
-                          [ngClass]="{'bg-success': user.status == true, 'bg-danger': user.status !== true}">
-                            {{ user.status ? 'Activo' : 'Inactivo' }}
-                      </span>
+                        <span 
+                            class="float-right badge" 
+                            [ngClass]="{'bg-success': user.estado === 1, 'bg-danger': user.estado === 0}">
+                            {{ user.estado === 1 ? 'Activo' : 'Inactivo' }}
+                        </span>
                       </td>
-                      <td>
-                        <span class="tag tag-success">{{ user.createdAt }}</span>
-                      </td>
+                      
                       <td>
                         <button type="button" class="btn btn-outline-primary btn-block">
                           <i class="bi bi-pencil"></i> Editar
@@ -71,10 +82,12 @@
                         </button>
                       </td>
                     </tr>
+
                     </tbody>
                 </table>
               </div>
               <!-- /.card-body -->
+
             </div>
             <!-- /.card -->
           </div>
