--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,153 +1,54 @@
 <main class="app-main">
-    <!--begin::App Content Header-->
-    <div class="app-content-header">
-      <!--begin::Container-->
-      <div class="container-fluid">
-        <!--begin::Row-->
-        <div class="row">
-          <div class="col-sm-8"><h3 class="mb-0">Temas Populares</h3></div>
-          <div class="col-sm-4">
-          
-          </div>
-        </div>
-        <!--end::Row-->
+  <div class="app-content-header">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-8"><h3 class="mb-0">Temas Populares</h3></div>
       </div>
-      <!--end::Container-->
     </div>
-    <!--end::App Content Header-->
-    <!--begin::App Content-->
-    <div class="app-content">
-      <!--begin::Container-->
-      <div class="container-fluid">
-        <!--begin::Row-->
-        <div class="row">
-          <div class="col-12">
-            <div class="card">
-                <div class="card-header border-0">
-                  <div class="card-tools">
-                    <a href="#" class="btn btn-tool btn-sm">
-                      <i class="fas fa-download"></i>
-                    </a>
-                    <a href="#" class="btn btn-tool btn-sm">
-                      <i class="fas fa-bars"></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="card-body table-responsive p-0">
-                  <table class="table table-striped table-valign-middle">
-                    <thead>
-                    <tr>
-                      <th>Tema</th>
-                      <th>Autor</th>
-                      <th>Posts</th>
-                      <th>Visitas</th>
-                      <th>Último mensaje</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                      <td>
-                        <img src="img/default-150x150.png" alt="Product 1" class="img-circle img-size-32 mr-2">
-                        <span class="text">
-                          ¿Qué opinan de este meme? 😂
-                          <i class="fas fa-search"></i>
-                        </span>
-                    
-                      </td>
-                      <td>pepito65</td>
-                      <td>
-                       45
-                      </td>
-                      <td>
-                          123
-                      </td>
-                      <td>
-                          Hace 60 minutos
-                         
-                      </td>
-                      
-                    </tr>
-                    <tr>
-                      <td>
-                        <img src="img/default-150x150.png" alt="Product 1" class="img-circle img-size-32 mr-2">
-                        <span class="text">
-                          Castro por proyecto de voto extranjero: El Gobierno tiene "susto que ganemos las próximas elecciones"
-                          <i class="fas fa-search"></i>
-                        </span>
+  </div>
 
-                      </td>
-                      <td>rextuar</td>
-                      <td>
-                        512
-                      </td>
-                      <td>
-                        512
-                      </td>
+  <div class="app-content container-fluid">
+    <div *ngIf="loading" class="alert alert-info">Cargando temas...</div>
+    <div *ngIf="error" class="alert alert-danger">{{ error }}</div>
 
-                      <td>
-                        Hace 1 hora
-                      </td>
-                     
-                    </tr>
-                    <tr>
-                      <td>
-                        <img src="img/default-150x150.png" alt="Product 1" class="img-circle img-size-32 mr-2">
-
-                        <span class="text">
-                          Si fueras presidente de Chile y tuvieras que tomar una decisión o prohibición muy autoritaria, ¿cuál sería?
-                          <i class="fas fa-search"></i>
-                        </span>
-                        
-                      </td>
-                      <td>asdasd</td>
-                      <td>
-                        652
-                      </td>
-                      <td>
-                       50
-                      </td>
-                      <td>
-                          Hace 25 minutos
-                      </td>
-                     
-                    </tr>
-                    <tr>
-                      <td>
-                        <img src="img/default-150x150.png" alt="Product 1" class="img-circle img-size-32 mr-2">
-
-                        <span class="text">
-                          Les queda tiempo para jugar luego del trabajo?
-                          <i class="fas fa-search"></i>
-                        </span>
-                        <span class="badge bg-danger">NEW</span>
-                      </td>
-                      <td>tepotepo</td>
-                      <td>
-                        
-                        56
-                      </td>
-                      <td>
-                       34
-                      </td>
-                      <td>
-                          Hace 25 minutos
-                      </td>
-                     
-                    </tr>
-                    </tbody>
-                  </table>
-                </div>
+    <div *ngIf="!loading && !error">
+      <div class="row">
+        <div class="col-12">
+          <div class="card">
+            <div class="card-header border-0">
+              <div class="card-tools">
+                <button class="btn btn-tool btn-sm"><i class="fas fa-download"></i></button>
+                <button class="btn btn-tool btn-sm"><i class="fas fa-bars"></i></button>
               </div>
-           
+            </div>
+
+            <div class="card-body table-responsive p-0">
+              <table class="table table-striped table-valign-middle" *ngIf="temas.length > 0">
+                <thead>
+                  <tr>
+                    <th>Tema</th>
+                    <th>Autor</th>
+                    <th>Visitas</th>
+                    <th>Fecha de creación</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let tema of temas">
+                    <td>
+                      <img src="img/default-150x150.png" alt="img" class="img-circle img-size-32 mr-2">
+                      <span class="text">{{ tema.titulo }}</span>
+                    </td>
+                    <td>usuario_{{ tema.usuarioId || 'desconocido' }}</td>
+                    <td>{{ tema.id * 5 }}</td>
+                    <td>{{ tema.fechaCreacion }}</td>
+                  </tr>
+                </tbody>
+              </table>
+              <div *ngIf="temas.length === 0" class="p-3">No hay temas publicados.</div>
+            </div>
           </div>
         </div>
-        <!--end::Row-->
       </div>
-      <!--end::Container-->
     </div>
-    <!--end::App Content-->
-    <!--begin::App Content Bottom Area-->
-  
-    <!--end::App Content Bottom Area-->
-  </main>
- 
+  </div>
+</main>
