--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -46,9 +46,9 @@
         </form>
         
         <!-- /.social-auth-links -->
-        <p class="mb-1"><a href="forgot-password.html">Olvide mi contraseña</a></p>
+        <p class="mb-1"><a >Olvide mi contraseña</a></p>
         <p class="mb-0">
-          <a href="register.html" class="text-center"> Registrarse </a>
+            <a [routerLink]="'/auth/registrarse'" class="text-center"> Registrarse </a>
         </p>
       </div>
       <!-- /.login-card-body -->
