--- a/src/app/usuarios/listado/usuarios.component.html
+++ b/src/app/usuarios/listado/usuarios.component.html
@@ -77,7 +77,7 @@
                           <i class="bi bi-pencil"></i> Editar
                         </button>
 
-                        <button type="button" class="btn btn-outline-danger btn-block">
+                        <button type="button" class="btn btn-outline-danger btn-block" (click)="onDeleteUser(user.id)">
                           <i class="bi bi-trash"></i> Eliminar
                         </button>
                       </td>
